force-app/main/default/objects/Solicitud_de_Retiro__c/fields/Cantidad_Paquetes__c.field-meta.xml
<CustomField>
    <fullName>Cantidad_Paquetes__c</fullName>
    <label>Cantidad Paquetes</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>