force-app/main/default/objects/Solicitud_de_Retiro__c/fields/Contacto_para_Retiro__c.field-meta.xml
<CustomField>
    <fullName>Contacto_para_Retiro__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contacto para Retiro</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Cuenta__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Solicitudes de Retiro</relationshipLabel>
    <relationshipName>Solicitudes_de_Retiro</relationshipName>
    <type>Lookup</type>
</CustomField>