force-app/main/default/objects/Solicitud_de_Retiro__c/fields/Cuenta__c.field-meta.xml
<CustomField>
    <fullName>Cuenta__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cuenta</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Solicitudes de Retiro</relationshipLabel>
    <relationshipName>Solicitudes_de_Retiro</relationshipName>
    <type>Lookup</type>
</CustomField>