force-app/main/default/objects/Solicitud_de_Retiro__c/fields/Direcciones__c.field-meta.xml
<CustomField>
    <fullName>Direcciones__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Direcciones</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Direcciones__c.Cuenta__c</field>
            <operation>equals</operation>
            <valueField>$Source.Cuenta__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Direcciones__c</referenceTo>
    <relationshipLabel>Solicitudes de Retiro</relationshipLabel>
    <relationshipName>Solicitudes_de_Retiro</relationshipName>
    <type>Lookup</type>
</CustomField>