force-app/main/default/objects/Solicitud_de_Retiro__c/fields/Estado_Solicitud__c.field-meta.xml
<CustomField>
    <fullName>Estado_Solicitud__c</fullName>
    <label>Estado Solicitud</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pendiente</fullName>
            </value>
            <value>
                <fullName>Retirado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>