force-app/main/default/objects/Solicitud_de_Retiro__c/fields/Etapa__c.field-meta.xml
<CustomField>
    <fullName>Etapa__c</fullName>
    <label>Etapa</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Nuevo</fullName>
                <default>true</default>
                <label>Nuevo</label>
            </value>
            <value>
                <fullName>Validado Customer Service</fullName>
            </value>
            <value>
                <fullName>Recibido Operaciones</fullName>
            </value>
            <value>
                <fullName>Asignado a Mensajero</fullName>
            </value>
            <value>
                <fullName>Recibido por Mensajero</fullName>
            </value>
            <value>
                <fullName>Retirado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>