force-app/main/default/objects/Solicitud_de_Retiro__c/fields/Fecha_de_Retiro__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_Retiro__c</fullName>
    <label>Fecha de Retiro</label>
    <type>Date</type>
</CustomField>