force-app/main/default/objects/Solicitud_de_Retiro__c/fields/Hora_Desde__c.field-meta.xml
<CustomField>
    <fullName>Hora_Desde__c</fullName>
    <label>Hora Desde</label>
    <type>Time</type>
</CustomField>