force-app/main/default/objects/Solicitud_de_Retiro__c/fields/Hora_Hasta__c.field-meta.xml
<CustomField>
    <fullName>Hora_Hasta__c</fullName>
    <label>Hora Hasta</label>
    <type>Time</type>
</CustomField>