force-app/main/default/objects/Solicitud_de_Retiro__c/fields/Indicaciones_Especiales__c.field-meta.xml
<CustomField>
    <fullName>Indicaciones_Especiales__c</fullName>
    <label>Indicaciones Especiales</label>
    <type>TextArea</type>
</CustomField>