force-app/main/default/objects/Solicitud_de_Retiro__c/fields/Otro_Contacto_para_Retiro__c.field-meta.xml
<CustomField>
    <fullName>Otro_Contacto_para_Retiro__c</fullName>
    <label>Otro Contacto para Retiro</label>
    <length>100</length>
    <type>Text</type>
</CustomField>