force-app/main/default/objects/Solicitud_de_Retiro__c/fields/Peso_Aproximado__c.field-meta.xml
<CustomField>
    <fullName>Peso_Aproximado__c</fullName>
    <label>Peso Aproximado (Kg)</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>