force-app/main/default/objects/Solicitud_de_Retiro__c/fields/Pickup_Portal__c.field-meta.xml
<CustomField>
    <fullName>Pickup_Portal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pickup Portal</label>
    <type>Checkbox</type>
</CustomField>