force-app/main/default/objects/Solicitud_de_Retiro__c/fields/Rango_Horario__c.field-meta.xml
<CustomField>
    <fullName>Rango_Horario__c</fullName>
    <label>Rango Horario</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>10:30 - 11:30</fullName>
            </value>
            <value>
                <fullName>11:30 - 12:30</fullName>
            </value>
            <value>
                <fullName>12:30 - 13:30</fullName>
            </value>
            <value>
                <fullName>13:30 - 14:30</fullName>
            </value>
            <value>
                <fullName>14:30 - 15:30</fullName>
            </value>
            <value>
                <fullName>15:30 - 16:30</fullName>
            </value>
            <value>
                <fullName>16:30 - 17:30</fullName>
            </value>
            <value>
                <fullName>10:00 - 14:00</fullName>
            </value>
            <value>
                <fullName>10:00 - 17:30</fullName>
            </value>
            <value>
                <fullName>14:00 - En adelante</fullName>
            </value>
            <value>
                <fullName>10:00 - En adelante</fullName>
            </value>
            <value>
                <fullName>Todo el día</fullName>
            </value>
            <value>
                <fullName>Hasta las 18:00</fullName>
            </value>
            <value>
                <fullName>Hasta las 14:00</fullName>
            </value>
            <value>
                <fullName>14:00 - 17:30</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>