force-app/main/default/objects/Solicitud_de_Retiro__c/fields/Tipo_de_Paquete__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Paquete__c</fullName>
    <label>Tipo de Paquete</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sobre</fullName>
            </value>
            <value>
                <fullName>Caja</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>